# cuda-path-tracer

./: .gitignore  README.md  sancheck.py
cmake/: gcc.cmake  glm.cmake
fltk-1.3.8/: config.h  config.status  fltk-config  makeinclude
fltk-1.3.8/fluid/: fluid
fltk-1.3.8/test/: CubeView  adjuster  animated  arc  ask  bitmap  blocks  boxtype  browser  button  buttons  cairo_test  checkers  clock  colbrowser  color_chooser  cube  cursor  curve  demo  device  doublebuffer  editor  fast_slow  file_chooser  fltk-versions  fonts  forms  fractals  fullscreen  gl_overlay  glpuzzle  hello  help  icon  iconize  image  inactive  input  input_choice  (+37 more)
important_assets/scenes/: cornell-box-ray.ray  cornell-box.ray  cornell-box2-ray.ray  cornell-box2-specular-ray.ray  cornell-box2-specular.ray  cornell-box2-transmissive-ray.ray  cornell-box2-transmissive.ray  cornell-box2.ray  dragon.ray  teapot-trans.ray
important_assets/special-scenes/: 3-dragon-spec.ray  3-dragon-trans.ray  dragon-spec-ray.ray  dragon-spec.ray  dragon-trans.ray  teapot-trans-ray.ray  teapot-trans.ray  teapot.ray
src/: CMakeLists.sources  CMakeLists.txt  RayTracer.cpp  RayTracer.cu  RayTracer.h  RayTracerDOF.cpp  cuda_util.h  deviceInfo.cu  improved_path_tracer.cu  main.cu  naive_path_tracer.cu  path_tracer.cu  path_tracing.cuh
src/SceneObjects/: SplitGeo.h  trimesh.cpp  trimesh.h
src/gpu/: GPUBVH.cu  GPUBVH.cuh  GPUCamera.cu  GPUCamera.cuh  GPUGeometry.cu  GPUGeometry.cuh  GPUIsect.cuh  GPUManaged.cuh  GPUMaterial.cuh  GPURay.cu  GPURay.cuh  GPUScene.cuh  GPUTrimesh.cuh  GPUbb.cuh
src/parser/: Parser.cpp  Token.h
src/scene/: bvh.cpp  bvh.h  camera.h  cubeMap.cpp  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  scene.cpp  scene.h
src/ui/: CommandLineUI.cpp  CommandLineUI.h  TraceGLWindow.cpp
timings/: cpu_timing.txt  cpu_timing_bvh.txt  get_timings.py  gpu_timing.txt  gpu_timing_bvh.txt
